--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
             <div class="col-3">
                 <h3 class="footer__title">Services</h3>
                 <div class="footer__box">
-                    <a href="" class="footer__link">info@cloudbudget.com</a>
-                    <a href="" class="footer__link">+1 844-721-7120</a>
+                    <a href="mailto: info@cloudbudget.com" class="footer__link">info@cloudbudget.com</a>
+                    <a href="tel: +1 844-721-7120" class="footer__link">+1 844-721-7120</a>
                     <div class="footer__icons">
                         <a href=""><i class="fab fa-facebook-f"></i></a>
                         <a href=""><i class="fab fa-linkedin-in"></i></a>
